MW-1264: Wildcard provider for WebDAV clients and auto-cleaning of HTTP clients after 2 days of inactivity